# crypto-research-agent

./: .cursorrules  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_DEVELOPERS.md  poetry.toml  pyproject.toml
research_agent/: __init__.py  logger.py  settings.py
research_agent/agents/: main.py
research_agent/agents/graph/: __init__.py  state.py
research_agent/agents/nodes/: __init__.py  sample_agent.py
research_agent/llm/: config.py  litellm_wrapper.py  schemas.py
